langtools/test/tools/javac/overrridecrash/B.out
B.java:12:27: compiler.err.illegal.combination.of.modifiers: private, protected
A.java:25:27: compiler.err.illegal.combination.of.modifiers: private, protected
2 errors
